# distest

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: theory.md
src/distest/: __init__.py  core.py
src/distest/distributions/: __init__.py  binned_mle.py  custom.py  scipy_ext.py  unbinned_mle.py
src/distest/robust/: __init__.py  binned.py  functions.py  unbinned.py
tests/: conftest.py  test_core.py  test_distributions_binned.py  test_distributions_unbinned.py  test_robust_binned.py  test_robust_unbinned.py
