[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "distest"
version = "0.1.0"
description = "Statistical estimation library for unbinned and binned data"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "numpy>=1.20",
    "scipy>=1.7",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/distest"]

[tool.pytest.ini_options]
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src/distest"]
branch = true

[tool.coverage.report]
show_missing = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
check_untyped_defs = true
warn_no_return = true

[[tool.mypy.overrides]]
module = "scipy.*"
ignore_missing_imports = true

[tool.ruff]
line-length = 88
target-version = "py310"
